--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
 <footer class="footer">
   <p>
-    <%= t 'spree.powered_by' %> <%= link_to 'Solidus', 'http://solidus.io/' %>
+    <%= t 'spree.powered_by' %> <%= link_to 'STG', 'http://solidus.io/' %>
   </p>
 
   <%
