--- a/app/views/products/_product-card.html.erb
+++ b/app/views/products/_product-card.html.erb
@@ -33,7 +33,7 @@
           </span>
         <% end %>
       <% else%>
-        Please login to see price
+        REGISTER / LOGIN TO SEE PRICES
       <% end%>
         <span itemprop="priceCurrency" content="<%= current_pricing_options.currency %>"></span>
       </section>
