--- a/app/views/products/_product_header.html.erb
+++ b/app/views/products/_product_header.html.erb
@@ -2,25 +2,26 @@
   <h1 class="product-header__title" itemprop="name">
     <%= product.name %>
   </h1>
+  <% if spree_current_user %>
+    <% product.price_for_options(current_pricing_options)&.money and !product.price.nil? %>
+      <h2 class="product-header__title" id="product-price">
+        <%= content_tag(
+          :span,
+          display_price(product),
+          itemprop: 'price',
+          content: product.price_for_options(current_pricing_options)&.money.to_d,
+          data: { js: 'price' }
+        ) %>
 
-  <% if spree_current_user && product.price_for_options(current_pricing_options)&.money and !product.price.nil? %>
-    <h2 class="product-header__title" id="product-price">
-      <%= content_tag(
-        :span,
-        display_price(product),
-        itemprop: 'price',
-        content: product.price_for_options(current_pricing_options)&.money.to_d,
-        data: { js: 'price' }
-      ) %>
-
-      <%= content_tag(
-        :span,
-        nil,
-        itemprop: 'priceCurrency',
-        content: current_pricing_options.currency
-      ) %>
-    </h2>
-  <% else%>
-    Please login to see price
-  <% end %>
+        <%= content_tag(
+          :span,
+          nil,
+          itemprop: 'priceCurrency',
+          content: current_pricing_options.currency
+        ) %>
+      </h2>
+    <% end %>
+  <% else %>
+      REGISTER / LOGIN TO SEE PRICES
+  <% end%>
 </header>
